--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,4 +24,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: rustscan
-        path: ./target/release/*
+        path: ./target/release/rustscan
